--- a/package.json
+++ b/package.json
@@ -25,15 +25,16 @@
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.4.0",
     "cssnano": "^5.0.8",
-    "html-webpack-plugin": "^5.3.2",
+    "html-webpack-plugin": "^5.4.0",
     "mini-css-extract-plugin": "^2.4.2",
     "postcss-loader": "^6.2.0",
     "url-loader": "^4.1.1",
-    "webpack": "^5.58.1",
+    "webpack": "^5.58.2",
     "webpack-cli": "^4.9.0",
     "webpack-dev-server": "^4.3.1"
   },
   "dependencies": {
-    "core-js": "^3.18.2"
-  }
+    "core-js": "^3.18.3"
+  },
+  "keywords": []
 }
